# FileOrganizer

./: .gitignore  FileOrganizer.py  README.md  electron-builder.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.iss  tsconfig.json  version.json  vite.config.ts
.claude/: settings.local.json
.superpowers/brainstorm/1006-1778910923/content/: color-schemes.html  dashboard-mockup.html  layout-options.html  waiting-1.html  welcome.html
.superpowers/brainstorm/1006-1778910923/state/: server-stopped
dist-electron/: main.js  main.js.map  preload.js  preload.js.map
docs/: version.json
docs/superpowers/plans/: 2026-05-16-electron-rebuild.md
docs/superpowers/specs/: 2026-05-16-electron-rebuild-design.md
electron/: config.ts  ipc.ts  main.ts  organizer.ts  preload.ts  presets.ts  tray.ts  types.ts  updater.ts  watcher.ts
fileorganizer/: __init__.py  config.py  logging_utils.py  main.py  metadata.py  mutex.py  organizer.py  resources.py  ui.py  updater.py  watcher.py
scripts/: sync_version.py
src/: App.module.css  App.tsx  i18n.ts  main.tsx  types.ts  window.d.ts
src/components/: ActivityList.module.css  ActivityList.tsx  BarChart.module.css  BarChart.tsx  Sidebar.module.css  Sidebar.tsx  StatCard.module.css  StatCard.tsx
src/context/: LangContext.tsx
src/pages/: Dashboard.module.css  Dashboard.tsx  Log.module.css  Log.tsx  Rules.module.css  Rules.tsx  Settings.module.css  Settings.tsx
src/styles/: global.css  themes.css
tests/: organizer.test.ts  test_config.py  test_organizer.py
